# turbovault

./: CHANGELOG.md  Cargo.toml  Dockerfile
.github/workflows/: ci.yml  release.yml
crates/turbovault/: Cargo.toml
crates/turbovault-batch/: Cargo.toml
crates/turbovault-core/: Cargo.toml
crates/turbovault-export/: Cargo.toml
crates/turbovault-graph/: Cargo.toml
crates/turbovault-parser/: Cargo.toml
crates/turbovault-rest/: Cargo.toml
crates/turbovault-rest/src/: auth.rs  content.rs  errors.rs  lib.rs  pagination.rs  response.rs  state.rs  trash_manifest.rs  vault_resolver.rs
crates/turbovault-rest/src/v1/: batch.rs  files.rs  health.rs  links.rs  mod.rs  notes.rs  notes_info.rs  periodic.rs  recent.rs  search.rs  trash.rs
crates/turbovault-rest/tests/: test_auth.rs  test_batch.rs  test_errors.rs  test_health.rs  test_integration.rs  test_links.rs  test_navigation.rs  test_notes_crud.rs  test_notes_patch.rs  test_search.rs  test_trash.rs
crates/turbovault-rest/tests/helpers/: mod.rs
crates/turbovault-tools/: Cargo.toml
crates/turbovault-tools/src/: analysis_tools.rs  graph_tools.rs  lib.rs  relationship_tools.rs  search_engine.rs  search_tools.rs
crates/turbovault-vault/: Cargo.toml
crates/turbovault-vault/src/: manager.rs
crates/turbovault/src/: tools.rs
crates/turbovault/tests/: vault_integrity_test.rs
crates/turbovault/tests/helpers/: mod.rs
docs/superpowers/plans/: 2026-03-18-vault-integrity-test-suite.md  2026-03-19-vault-rest-api.md
docs/superpowers/specs/: 2026-03-18-vault-integrity-test-suite-design.md  2026-03-19-vault-rest-api-design.md
