[workspace]
members = [
    "crates/turbovault-core",
    "crates/turbovault-parser",
    "crates/turbovault-graph",
    "crates/turbovault-vault",
    "crates/turbovault-batch",
    "crates/turbovault-export",
    "crates/turbovault-tools",
    "crates/turbovault",
]
resolver = "2"

[workspace.package]
version = "1.2.6"
edition = "2024"
rust-version = "1.90.0"
authors = ["Epistates, Inc <nick@epistates.com>"]
license = "MIT"
repository = "https://github.com/epistates/turbovault"
homepage = "https://github.com/epistates/turbovault"
readme = "README.md"
keywords = ["mcp", "obsidian", "vault", "llm", "agent"]
categories = ["text-processing", "development-tools"]
description = "LLM-optimized Obsidian vault MCP server with advanced editing, search, and graph analysis"
publish = true

[workspace.dependencies]
tokio = { version = "1.47", features = ["io-util", "macros", "rt-multi-thread", "sync", "time", "fs"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value", "preserve_order"] }
serde_yaml = "0.9"  # Note: community fork (serde_yml) available if maintenance concerns

# Markdown Parsing (2025 diligence: see DEPENDENCY_DILIGENCE_2025.md)
pulldown-cmark = "0.13"      # CommonMark parser with OFM extensions (headings, tasks, frontmatter, code blocks)

# Observability & Diagnostics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

# Data structures & algorithms
petgraph = "0.6"             # 2.1M+ downloads, ecosystem standard for graphs

# File I/O & Watching (upgraded from watchfiles to notify directly)
notify = "6"                 # 2025 current, v6.x active maintenance
walkdir = "2"

# Parsing utilities
regex = "1"
lazy_static = "1.4"
nom = "7"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
dashmap = "5.5"

# Configuration
config = "0.14"
clap = { version = "4.4", features = ["derive", "env"] }

# Testing utilities
tempfile = "3"
insta = "1.34"
criterion = "0.8"

# Logging
log = "0.4"
env_logger = "0.11"

# Search and Matching (Tier 1d: Replace hand-rolled implementations)
tantivy = "0.22"           # Full-text search engine (Apache Lucene-inspired, production-grade)

# File Editing & Diff (World-class fuzzy matching for LLM-generated edits)
similar = { version = "2.7", features = ["inline"] }  # mitsuhiko's diff lib (used by insta)
strsim = "0.11"           # Levenshtein distance for fuzzy matching (if similar insufficient)
sha2 = "0.10"             # SHA-256 hashing for content validation
unicode-normalization = "0.1.6"  # Unicode NFC normalization

# Path handling & Security
shellexpand = "3.1"       # Shell-like expansions (tilde, env vars) - battle-tested
path_trav = "2"           # Path traversal detection - security-focused

# DEFERRED (Phase 3+):
# sonic-rs = "0.3"         # Fastest JSON parser, deferred optimization

# Workspace crates
turbovault-core = { version = "1.2.6", path = "crates/turbovault-core" }
turbovault-parser = { version = "1.2.6", path = "crates/turbovault-parser" }
turbovault-graph = { version = "1.2.6", path = "crates/turbovault-graph" }
turbovault-vault = { version = "1.2.6", path = "crates/turbovault-vault" }
turbovault-batch = { version = "1.2.6", path = "crates/turbovault-batch" }
turbovault-export = { version = "1.2.6", path = "crates/turbovault-export" }
turbovault-tools = { version = "1.2.6", path = "crates/turbovault-tools" }
turbovault = { version = "1.2.6", path = "crates/turbovault" }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.ci]
inherits = "release"
opt-level = "s"
lto = "thin"
codegen-units = 16
debug = false

[profile.dev]
opt-level = 0
debug = true
