[package]
name = "turbovault-rest"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Versioned REST API for TurboVault vault access"

[dependencies]
axum = "0.8"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-http = { version = "0.6", features = ["trace"] }
tower = "0.5"
chrono.workspace = true
sha2.workspace = true
log.workspace = true
thiserror.workspace = true
turbovault-core = { path = "../turbovault-core" }
turbovault-tools = { path = "../turbovault-tools" }
turbovault-vault = { path = "../turbovault-vault" }
turbovault-graph = { path = "../turbovault-graph" }
walkdir = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
tempfile.workspace = true
http-body-util = "0.1"
serde_json.workspace = true
tower = { version = "0.5", features = ["util"] }
