[package]
name = "turbovault-tools"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = true
description = "MCP tools implementation using turbomcp"
documentation = "https://docs.rs/turbovault-tools"

[dependencies]
turbovault-core = { workspace = true }
turbovault-parser = { workspace = true }
turbovault-graph = { workspace = true }
turbovault-vault = { workspace = true }
turbovault-batch = { workspace = true }
turbovault-export = { workspace = true }

# MCP server framework
# Note: No features needed here - tools crate only defines tool implementations
# Transport features are handled by the main turbovault binary
turbomcp = { version = "3.0.0" }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
tracing = { workspace = true }
tempfile = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
shellexpand = { workspace = true }

# Tier 1d: Production-grade full-text search
tantivy = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tempfile = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
