[package]
name = "turbovault"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish = true
description = "Production-grade MCP server for Obsidian vault management - Transform your vault into an intelligent knowledge system for AI agents"
documentation = "https://docs.rs/turbovault"
readme = "README.md"
keywords = ["mcp", "obsidian", "vault", "llm", "agent"]
include = [
  "src/",
  "tests/",
  "benches/",
  "resources/",
  "Cargo.toml",
  "README.md",
]

[features]
# Transport support - pick what you need, a la carte style
# ✨ OPTIMIZED: Default is stdio-only (~5-6 MB binary)
# Optional transports let users add features as needed (~100-300 KB each)

# Minimal default: STDIO transport (Claude Desktop standard)
default = []

# Individual transports - add what you need
stdio = []                                    # Always included, no external deps
http = ["turbomcp/http"]                     # Add HTTP server support (~200 KB)
websocket = ["turbomcp/websocket"]           # Add WebSocket support (~200 KB)
tcp = ["turbomcp/tcp"]                       # Add TCP server support (~100 KB)
unix = ["turbomcp/unix"]                     # Add Unix socket support (~100 KB) [Unix-only]

# Convenience bundles
http-full = ["http", "websocket"]            # HTTP + WebSocket
# Note: unix is excluded from all-transports on Windows (not supported)
all-transports-unix = ["http", "websocket", "tcp", "unix"]  # Everything (Unix-only)
all-transports = ["http", "websocket", "tcp"]  # Everything (cross-platform)
full = ["all-transports"]                    # Alias for all-transports

[[bin]]
name = "turbovault"
path = "src/bin/main.rs"

[dependencies]
turbovault-core = { workspace = true }
turbovault-vault = { workspace = true }
turbovault-tools = { workspace = true }

# MCP server framework (features passed through from turbovault)
turbomcp = { version = "3.0.0", features = ["telemetry"] }
turbomcp-server = { version = "3.0.0" }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
config = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
simple_logger = "5.0"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tempfile = { workspace = true }
criterion = { workspace = true, features = ["async_tokio", "html_reports"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
features = ["full"]
